--- a/CountryPredictor.html
+++ b/CountryPredictor.html
@@ -7,10 +7,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <title>Country Predictor</title>
     <link rel="stylesheet" href="CSS/navbar.css">
-    <link rel="icon" href=
-    "/Assests/logo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
+    <link rel="icon" href="/Assests/logo.png" type="image/x-icon">
         <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/tables.css">
     <link rel="stylesheet" href="CSS/extras.css">
@@ -18,6 +15,7 @@
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="CSS/historyArea.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
+    <link rel="stylesheet" href="/CSS/loading_anim.css">
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
         body {
@@ -63,7 +61,7 @@
     </div>
     </div>
 
-    
+<div id="containerOuterlayer">
     <div id="container" class="show">
         <h3>Country Predictor</h3>
         <div><input type="text" id="country" placeholder="Enter the first name here! " />
@@ -73,8 +71,10 @@
             onmouseleave="btnSize(false)" 
             onclick="countryPredict()">Predict</button>
         </div>
-        <div class="spinner-border hideLoadingGif" role="status">
-            <span class="sr-only ">Loading...</span>
+        <div id="loadingGif" hidden>
+            <div id="loadAnimation" class="spinner-border" hidden>
+            <!-- <span class="sr-only ">Loading...</span> -->
+            </div>
         </div>
         <p id="output"></p>
         <p text-align="center" id="warning">
@@ -83,7 +83,7 @@
         <button type="button" id="showHB"
         onclick="showHistory()">Show History</button>
     </div>
-
+</div>
 </body>
 <script src="JS/country_predictor.js"></script>
 
