--- a/genderGuesser.html
+++ b/genderGuesser.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
     <link rel="stylesheet" href="CSS/buttons.css">
     <link rel="stylesheet" href="CSS/tables.css">
     <link rel="icon" href=
@@ -16,6 +14,7 @@
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
+    <link rel="stylesheet" href="/CSS/loading_anim.css">
     <title>Gender Predictor</title>
     <style>
        @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
@@ -51,8 +50,9 @@
             onmouseup="btnSize(false)" 
             onmouseleave="btnSize(false)">Predict</button>
         </div>
-        <div class="spinner-border" id="hideLoadingGif" role="status" hidden>
-            <span class="sr-only">Loading...</span>
+        <div id="loadingGif" hidden>
+            <div class="spinner-border" id="hideLoadingGif" role="status" hidden>
+        </div>    
         </div>
         <p id="output"></p>
         <p align="center" id="warning">
