--- a/youtubeDislikeReturn.html
+++ b/youtubeDislikeReturn.html
@@ -6,8 +6,6 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="icon" href=
     "/Assests/logo.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css" />
     <link rel="stylesheet" href="./CSS/navbar.css" />
     <link rel="stylesheet" href="CSS/buttons.css">
@@ -16,6 +14,7 @@
     <link rel="stylesheet" href="CSS/container.css">
     <link rel="stylesheet" href="CSS/inputs.css">
     <link rel="stylesheet" href="/CSS/containerMobile.css">
+    <link rel="stylesheet" href="/CSS/loading_anim.css">
     <title>Youtube Dislike Return</title>
     <style>
         @import url('https://fonts.googleapis.com/css2?family=Titillium+Web&display=swap');
